@@ -6,4 +6,13 @@
 .Trashes
 ehthumbs.db
 Thumbs.db
+*.pyc
+.vscode/ # Visual Studio Code
+
+# Demovibes specific ignores
+static/media/ # Ignore all musics & data uploaded to the site since checkout
+
+# Template Ignores
+templates/local/ # Local templates for base system
+templates/jinja/local/ # Local templates for the Jinja system
 
