@@ -2,7 +2,7 @@
 Packages needed:
  lame libboost-dev libsamplerate-dev libicu-dev = demosauce
 
- pil (python imaging library) - check that libjpeg and libzlib is installed, otherwise you will miss jpeg / png support
+ Pillow (python imaging library) - check that libjpeg and libzlib is installed, otherwise you will miss jpeg / png support
 
 Create python virtual environment:
  Install pip (python package install program)
@@ -12,13 +12,14 @@ Create python virtual environment:
 
 Look over / change settings
  -Check settings.py
- -please add local settings / overrides in "settings_local.py"
-  -Override secret key
-  -check mail settings
-  -Complete django setting reference : http://docs.djangoproject.com/en/1.3/ref/settings/
+ -Copy the settings_local.py file from contrib to the demovibes folder & configure for your site:
+    -Override secret key
+    -check mail settings
+    -Complete django setting reference : http://docs.djangoproject.com/en/1.3/ref/settings/
 
 Initialize database:
- -change directory to demovibes/demovibes
+ -change directory to demovibes
+ -Activate your virtual environment (if used)
  -run "python manage.py syncdb --all" - Install all tables,
  -run "python manage.py migrate --fake" - Tell south to mark all migrations as "done"
 
@@ -40,4 +41,14 @@ Other stuff:
  -Similar for postgresql, the pip package is called "psycopg2"
  -Installing memcached and set it up as a cache for django is highly recommended
  
-uWSGI : Latest version should work. V0.9.5.4 preferred.
+uWSGI : Latest version probbably wont work. V0.9.5.4 preferred. To fix compilation issues on newer 
+Linux installations even without -Werror (Debian9/Ubuntu 18), change line 58 to the following instead:
+
+from:
+cflags = ['-Wall','-Werror', '-D_LARGEFILE_SOURCE', '-D_FILE_OFFSET_BITS=64'] + os.environ.get("CFLAGS", "").split()
+
+to:
+cflags = ['-Wall', '-D__clang__', '-D_LARGEFILE_SOURCE', '-D_FILE_OFFSET_BITS=64'] + os.environ.get("CFLAGS", "").split()
+
+Thanks to Greg Kennedy for the fix.
+For Ubuntu14, just remove the -Werror reference.
